WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70583
HTTPBodyStream in NSURLRequest gets lost when using CFNetwork loader
https://bugs.webkit.org/show_bug.cgi?id=70583
Summary
HTTPBodyStream in NSURLRequest gets lost when using CFNetwork loader
Pratik Solanki
Reported
2011-10-20 22:58:45 PDT
This is a bug when using the CFNetwork loader. If a user calls [NSURLRequest setHTTPBodyStream:] on a request and passes it to WebKit to load, we don't pass the stream in the body of the http request.
Attachments
Patch
(1.98 KB, patch)
2011-10-20 23:27 PDT
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Patch
(2.01 KB, patch)
2011-10-20 23:32 PDT
,
Pratik Solanki
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2011-10-20 22:59:15 PDT
<
rdar://problem/10281227
>
Pratik Solanki
Comment 2
2011-10-20 23:27:52 PDT
Created
attachment 111908
[details]
Patch
Pratik Solanki
Comment 3
2011-10-20 23:32:19 PDT
Created
attachment 111909
[details]
Patch
Pratik Solanki
Comment 4
2011-10-22 22:05:21 PDT
Committed
r98198
: <
http://trac.webkit.org/changeset/98198
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug