HTTPBodyStream in NSURLRequest gets lost when using CFNetwork loader https://bugs.webkit.org/show_bug.cgi?id=70583 <rdar://problem/10281227>

Reviewed by Darin Adler.

Call WebCore::setHTTPBody() only if we actually have a FormData. Unconditionally calling it
results in us passing 0 to wkCFURLRequestSetHTTPRequestBodyParts() which resets any input
stream specified by the user on the NSURLRequest. This code matches the behavior in the
Foundation version of doUpdatePlatformRequest().

* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::ResourceRequest::doUpdatePlatformRequest):

Canonical link: https://commits.webkit.org/86875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98198 268f45cc-cd09-0410-ab3c-d52691b4dbfc